# gprmaxui

./: CITATION.cff  Makefile  README.md  bash-container.sh  install-gprMax.sh  install_gprmax  install_gprmax.sh  mkdocs.yml  push-container.sh  pyproject.toml
docker/: Dockerfile
docs/: 404.html  index.html
docs/search/: search_index.json
docs/tutorials/getting_started/: index.html
examples/: cluster_targets.py  demo_visualization.ipynb  png2geometry.py  root_sims.py  run_simulation.py  single_potato_target.py  single_target.py  single_target2.py
examples/root_images/: root1.txt  root2.txt  root3.txt
gprmaxui/: commands_parser.py  domain_commands.py  geometry_commands.py  gprmax_model.py  plotter.py  sources_commands.py  utils.py
mkdocs/: index.md
mkdocs/tutorials/: getting_started.md
scripts/: check_gpu.py
src/gprmaxui/: gprmax_model.py  utils.py
src/gprmaxui/commands/: commands_parser.py  domain_commands.py  geometry_commands.py
tests/: test_parallel_execution.py
